Task-50365: Make sure that the selector's width is dynamic and matches the text on draft visibility (#314)
Prior to this change, the draft visibility selector label is not well displayed in one line when the label is too long after translation. After this change, the display is well fixed in that case

--- a/webapp/src/main/webapp/skin/less/news.less
+++ b/webapp/src/main/webapp/skin/less/news.less
@@ -616,7 +616,7 @@
     background-color: #FFFFFF;
 
     .selectMenuClass{
-      width: 110px;
+      width: 160px;
       padding-top: 5px;
       .v-menu__content{
         top: 40px!important;
@@ -626,10 +626,6 @@
           box-shadow: none!important;
         }
       }
-    }
-    .DraftVisibleInput{
-      max-width: 80px;
-      color: @grayDark;
     }
     .newsFormButtons {
       display: inline-flex;
